added additional effects

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     font-family: "Plus Jakarta Sans";
-    border: 1px solid red; 
+    /*border: 1px solid red; */
     
 }
 
@@ -650,5 +650,5 @@ a {
     }
     .mobilefootergetstartedcontainer:hover {
         filter: brightness(150%);
-    
+    }
 }
