--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -6,10 +6,11 @@
     font-family: "Plus Jakarta Sans";
     /*border: 1px solid red; */
     
+    
 }
 
 body {
-    margin: 0 auto;
+    background-color: #FFFFFF;
 }
 
 a {
@@ -29,11 +30,8 @@ a {
 .mobilemaincontainer {
     height: 2615px;  
     width: 375px;
-    /*margin-left: 1958px;
-    margin-top: 1808px; */
-    border-radius: 0px;
-    margin: 0 auto;
-    
+    border-radius: 0px; 
+    margin: 0 auto; 
 }
 
 /* container for navbar and lady photo */
@@ -50,17 +48,13 @@ a {
     text-align: left; 
     color: #13183F;
 }
-
-.mobilegetstartedcontainer {
+div .mobilegetstartedcontainer{
     height: 48px;
     width: 140px;
     margin-left: 210px;
-    margin-top: -40px;
+    margin-top: -45px;
     border-radius: 28px;
     background: #13183F;
-}
-.mobilegetstartedcontainer:hover {
-    background: #666CA3;
 }
 
 .mobilegetstartedtext {
@@ -348,7 +342,7 @@ a {
         display: none;
     }
 }
-@media  (min-width: 1100px) {
+@media  (min-width: 1099px) {
     .tabletladyphoto {
         display: none;
     }
@@ -358,17 +352,17 @@ a {
     .mobilemaincontainer {
         height: 1760px;
         width: 768px;
-        margin: 0 auto;
+        overflow: hidden;
         border-radius: 0px;
-        overflow: hidden; 
     }
     .mobileskilleduppertext {
         margin-left: 39px;
         margin-top: 31px;
     }
-    .mobilegetstartedcontainer {
-        margin-left: 588px;
-        margin-top: -40px;
+    div.mobilegetstartedcontainer {
+        position: relative;
+        margin-left: 560px;
+        margin-top: -45px;
     }
     .mobilemaximizeskilltext {
         height: 101px;
@@ -389,7 +383,7 @@ a {
     display: none;
     }
     .tabletladyphoto {
-        margin-left: 380px;
+        margin-left: 350px;
         margin-top: -550px;
     }
     .mobilelastlargecontainer {
@@ -401,12 +395,6 @@ a {
         margin-top: 0px;
         padding-left: px;
     }
-    .mobilecheckoutcontainer {
-        height: 259px;
-        width: 339px;
-        margin-left: 39px;
-        margin-top: 24px;  
-    }
     .mobilecheckouttext {
         margin-left: 32px;
         margin-top: 56px;
@@ -414,7 +402,7 @@ a {
     .mobilelastlargecontainer > *:first-child {
         height: 259px;
         width: 339px;
-        margin-left: 39px;
+        margin-left: 26px;
         margin-top: 24px; 
     }
     .mobilelastlargecontainer > *:nth-child(2) {
@@ -423,7 +411,7 @@ a {
         margin-top: 0px;
     }
     .mobilelastlargecontainer > *:nth-child(3) {
-        margin-left: 39px;
+        margin-left: 26px;
         margin-top: -35px; 
     }
     .mobilelastlargecontainer > *:nth-child(4) {
@@ -431,7 +419,7 @@ a {
         margin-top: -35px; 
     }
     .mobilelastlargecontainer > *:nth-child(5) {
-        margin-left: 39px; 
+        margin-left: 26px; 
         margin-top: -40px;
     }
     .mobilelastlargecontainer > *:last-child {
@@ -454,24 +442,23 @@ a {
 @media  (min-width:1100px) {
     .mobilemaincontainer {  
         height: 1845px;
-        width: 1440px;
-        margin: 0 auto;
+        width: 1300px;
         border-radius: 0px;
-        overflow: hidden;
+    
     }
     .mobileskilleduppertext {
         height: 45px;
         width: 114px;
-        margin-left: 165px;
+        margin-left: 90px;
         margin-top: 29px;
         font-size: 36px;
         line-height: 45px;
     }
-    .mobilegetstartedcontainer {
+    div.mobilegetstartedcontainer {
         height: 56px;
         width: 167px;
-        margin-left: 1108px;
-        margin-top: -50px; 
+        margin-left: 970px;
+        margin-top: -48px; 
     }
     .mobilegetstartedcontainer:hover {
         background: #666CA3;;
@@ -487,7 +474,7 @@ a {
     .mobilemaximizeskilltext {
         height: 143px;
         width: 457px;
-        margin-left: 165px;
+        margin-left: 90px;
         margin-top: 178px;
         font-size: 56px;
         line-height: 71px; 
@@ -495,14 +482,14 @@ a {
     .mobileourmoderntext {
         height: 84px;
         width: 445px;
-        margin-left: 165px;
+        margin-left: 90px;
         margin-top: 29px;
         font-size: 18px;
         line-height: 28px;
     }
     .mobileredgetstartedcontainer {
         height: 56px;
-        margin-left: 165px;
+        margin-left: 90px;
         margin-top: 40px;
     }
     .mobileredgetstartedcontainer:hover {
@@ -518,7 +505,7 @@ a {
         margin-left: 32px;
     }
     .desktopladyphoto {
-        margin-left: 730px;
+        margin-left: 580px;
         margin-top: -770px;
     }
     .mobilelastlargecontainer {
@@ -539,7 +526,7 @@ a {
     .mobilelastlargecontainer > *:first-child {
         height: 322px;
         width: 350px;
-        margin-left: 165px;
+        margin-left: 85px;
         margin-top: 24px; 
     }
     .mobilelastlargecontainer > *:nth-child(2) {
@@ -557,7 +544,7 @@ a {
     .mobilelastlargecontainer > *:nth-child(4) {
         height: 346px;
         width: 350px;
-        margin-left: 165px;
+        margin-left: 85px;
         margin-top: -56px;  
     }
     .mobilelastlargecontainer > *:nth-child(5) {
@@ -618,7 +605,7 @@ a {
     .mobilelastpartskilledtext {
         height: 45px;
         width: 114px;
-        margin-left: 165px;
+        margin-left: 90px;
         margin-top: 37px;
         font-size: 36px;
         line-height: 45px;
@@ -627,7 +614,7 @@ a {
     .mobilefootergetstartedcontainer {
         height: 56px;
         width: 167px;
-        margin-left: 1130px;
+        margin-left: 1050px;
         margin-top: -60px;
         border-radius: 28px;
         
